compiler/src/testsuite/extensions/modules/bad/bad_import_1.bl
use idontexist;

int main() {
    idontexist::yaobi();
    return 0;
}